--- a/3.2 Anchor Elements/index.html
+++ b/3.2 Anchor Elements/index.html
@@ -1,2 +1,9 @@
 <h1>My top 5 Favourite Websites</h1>
 <!-- Write your code below -->
+<ol>
+    <li><a href="www.google.co.in">Google</a></li>
+    <li><a href="Amazon.in">Amazon</a></li>
+    <li><a href="akash54kh.pythonanywhere.com">RPA Sata</a></li>
+    <li><a href="rediff.com">Rediffmail</a></li>
+    <li><a href="x.com">Twitter</a></li>
+</ol>
