--- a/9.4 Flexbox Pricing Table Project/index.html
+++ b/9.4 Flexbox Pricing Table Project/index.html
@@ -16,6 +16,9 @@
       .pricing-container {
         display: flex;
         justify-content: center;
+        align-items: center;
+        height: 100vh;
+        gap: 2rem;
       }
       
       /* Hint: What can you do with a media query and flexbox? */
