--- a/9.4 Flexbox Pricing Table Project/index.html
+++ b/9.4 Flexbox Pricing Table Project/index.html
@@ -29,9 +29,43 @@
         border-radius: 5px;
         text-align: center;
       }
+
+      .plan-title {
+        font-size: 26px;
+        font-weight: bold;
+        margin-bottom: 10px;
+      }
+
+      .plan-price {
+        font-size: 48px;
+        font-weight: bold;
+        margin-bottom: 10px;
+      }
+
+      .plan-features {
+        list-style: none;
+        padding: 0;
+        margin: 0;
+      }
+
+      .plan-features li {
+        margin-bottom: 20px;
+      }
+
+      .plan-button {
+        padding: 10px;
+        background-color: orange;
+        color: #fff;
+        border-radius: 5px;
+        border: none;
+      }
       
       /* Hint: What can you do with a media query and flexbox? */
       @media (max-width: 1250px) {
+        .pricing-container{
+          flex-direction: column;
+          height: 100%;
+        }
       }
     </style>
   </head>
