--- a/10.3 Mondrian Project/index.html
+++ b/10.3 Mondrian Project/index.html
@@ -22,8 +22,8 @@
 
     .container {
       display: grid;
-      grid-template-columns: 1fr auto;
-      grid-template-rows: 1fr 1fr;
+      grid-template-columns: 1fr 1fr 1fr 1fr;
+      grid-template-rows: 1fr 1fr 1fr 1f;
       background-color: #000;
       gap: 9px;
     }
@@ -49,6 +49,21 @@
     <div class="item red"></div>
     <div class="item"></div>
     <div class="item"></div>
+    <div class="item"></div>
+
+    <div class="item"></div>
+    <div class="item"></div>
+    <div class="item"></div>
+    <div class="item blue"></div>
+
+    <div class="item"></div>
+    <div class="item"></div>
+    <div class="item"></div>
+    <div class="item"></div>
+
+    <div class="item"></div>
+    <div class="item yellow"></div>
+    <div class="item black"></div>
     <div class="item"></div>
 
   </div>
