--- a/10.3 Mondrian Project/index.html
+++ b/10.3 Mondrian Project/index.html
@@ -22,8 +22,8 @@
 
     .container {
       display: grid;
-      grid-template-columns: 1fr 1fr 1fr 1fr;
-      grid-template-rows: 1fr 1fr 1fr 1f;
+      grid-template-columns: 1fr 198px 153px 50px;
+      grid-template-rows: 414px 290px 20px;
       background-color: #000;
       gap: 9px;
     }
@@ -59,11 +59,6 @@
     <div class="item"></div>
     <div class="item"></div>
     <div class="item"></div>
-    <div class="item"></div>
-
-    <div class="item"></div>
-    <div class="item yellow"></div>
-    <div class="item black"></div>
     <div class="item"></div>
 
   </div>
