--- a/10.3 Mondrian Project/index.html
+++ b/10.3 Mondrian Project/index.html
@@ -22,6 +22,8 @@
 
     .container {
       display: grid;
+      height: 748px;
+      width: 748px;
       grid-template-columns: 1fr 198px 153px 50px;
       grid-template-rows: 414px 290px 20px;
       background-color: #000;
@@ -29,8 +31,6 @@
     }
 
     .item {
-      height: 100px;
-      width: 100px;
       background-color: #F0F1EC;
     }
 
@@ -40,6 +40,24 @@
       background-color: #E72F24;
     }
 
+    .yellow {
+      background-color: #F9D01E;
+      height: 20px;
+    }
+
+    .black {
+      background-color: #232629;
+      height: 20px;
+    }
+
+    .con2 {
+      grid-area: 1 / 2 / 2 / 5;
+    }
+
+    .con4 {
+      grid-area: 2 / 2 / 3 / 4;
+    }
+
   </style>
 </head>
 
@@ -47,17 +65,15 @@
   <!-- Write your HTML here -->
    <div class="container">
     <div class="item red"></div>
-    <div class="item"></div>
-    <div class="item"></div>
-    <div class="item"></div>
+    <div class="item con2"></div>
 
     <div class="item"></div>
-    <div class="item"></div>
+    <div class="item con4"></div>
     <div class="item"></div>
     <div class="item blue"></div>
 
-    <div class="item"></div>
-    <div class="item"></div>
+    <div class="item yellow"></div>
+    <div class="item black"></div>
     <div class="item"></div>
     <div class="item"></div>
 
