--- a/10.3 Mondrian Project/index.html
+++ b/10.3 Mondrian Project/index.html
@@ -25,7 +25,7 @@
       height: 748px;
       width: 748px;
       grid-template-columns: 1fr 198px 153px 50px;
-      grid-template-rows: 414px 290px 20px;
+      grid-template-rows: 414px 296px 20px;
       background-color: #000;
       gap: 9px;
     }
@@ -58,6 +58,22 @@
       grid-area: 2 / 2 / 3 / 4;
     }
 
+    .con5 {
+      display: flex;
+      flex-direction: column;
+      grid-area: 2 / 4 / 4 / 4;
+    }
+
+    .blue {
+      height: 130px;
+      background-color: #004592;
+    }
+
+    .gap {
+      height: 11px;
+      background-color: #000;
+    }
+
   </style>
 </head>
 
@@ -69,12 +85,15 @@
 
     <div class="item"></div>
     <div class="item con4"></div>
+    <div class="item con5">
+      <div class="item blue"></div>
+      <div class="item gap"></div>
+      <div class="item"></div>
+    </div>
     <div class="item"></div>
-    <div class="item blue"></div>
 
     <div class="item yellow"></div>
     <div class="item black"></div>
-    <div class="item"></div>
     <div class="item"></div>
 
   </div>
