--- a/13.0 Capstone Project/index.html
+++ b/13.0 Capstone Project/index.html
@@ -12,36 +12,28 @@
 </head>
 
 <body>
+    <div class="validity">
+        <hr><marquee direction="left">You need wide screen to view the actual site!</marquee><hr>
+        <img align="center" scr="./assets/cnDcnDABNCH7r5Oz.jpg" alt="United Kingdom">
+    </div>
     <div class="intro">
-        <p id="target" align="right"><img src="./assets/cloud-on-blue-sky-on-transparent.png" alt="cloud"
-                height="150px"></p>
-        <p align="center">
-            <font face="Cooper Black" size="10" color="blue">Akash Khobare</font>
-        </p>
-        <p align="center">
-            <font face="Artifakt Element Heavy" size="5" color="blue">RPA Developer</font>
-        </p>
-        <p id="target" align="left"><img src="./assets/cloud-on-blue-sky-on-transparent.png" alt="cloud" height="150px">
-        </p>
+        <p id="target" align="right"><img src="./assets/cloud-on-blue-sky-on-transparent.png" alt="cloud" height="150px"></p>
+        <p align="center"><font face="Cooper Black" size="10" color="blue">Akash Khobare</font></p>
+        <p align="center"><font face="Artifakt Element Heavy" size="5" color="blue">RPA Developer</font></p>
+        <p id="target" align="left"><img src="./assets/cloud-on-blue-sky-on-transparent.png" alt="cloud" height="150px"></p>
         <p id="target" align="center"><img src="./assets/image_6617778.png"></p>
     </div>
 
     <div class="pic-intro">
         <p id="identity" align="center"><img src="./assets/IMG_0947.JPG" alt="akash-pic"></p>
-        <p align="center">
-            <font face="Forte" size="8" color="black">Hello</font>
-        </p>
-        <p align="center">
-            <font face="Monotype Corsiva" size="5" color="black">I am UiPath Developer. I worked for Innowise Global
-                Technology.<br>
-                The <a href="https://akash54kh.pythonanywhere.com">RPA Sata</a>. I ❤️ to screw things on my own.
-            </font>
-        </p>
+        <p align="center"><font face="Forte" size="8" color="black">Hello</font></p>
+        <p align="center"><font face="Monotype Corsiva" size="5" color="black">
+            I am UiPath Developer. I worked for Innowise Global Technology.<br>
+            The <a href="https://akash54kh.pythonanywhere.com">RPA Sata</a>.
+            I ❤️ to screw things on my own.</font></p>
     </div>
 
-    <p align="center">
-        <font face="MV Boli" size="6" color="red">Skills</font>
-    </p>
+    <p align="center"><font face="MV Boli" size="6" color="red">Skills</font></p>
     <div class="container">
         <div class="skill">
             <img class="rounded" src="./assets/257171530_800px.png" alt="skill-rpa">
@@ -65,15 +57,12 @@
 
     <div class="container">
         <div class="Contact">
-            <p align="center">
-                <font face="Artifakt Element Heavy" size="5" color="black"><i>Get in Touch</i></font>
-            </p>
+            <p align="center"><font face="Artifakt Element Heavy" size="5" color="black"><i>Get in Touch</i></font></p>
             <p align="center">
                 <font face="Artifakt Element Book" size="4" color="black">
                     It is been such a long time since we last talked! I would really love to get in touch and catch up
-                    on everything
-                    that is been going on. Let us plan a coffee or a video call soon. <br> I miss our conversations and
-                    would love to hear how you have been.
+                    on everything that is been going on. Let us plan a coffee or a video call soon. <br> 
+                    I miss our conversations and would love to hear how you have been.
                 </font>
             </p>
             <p align="center"><button type="button" class="btn btn-primary">Contact Me</button></p>
