--- a/13.0 Capstone Project/index.html
+++ b/13.0 Capstone Project/index.html
@@ -12,10 +12,6 @@
 </head>
 
 <body>
-    <div class="validity">
-        <hr><marquee direction="left">You need wide screen to view the actual site!</marquee><hr>
-        <img align="center" scr="./assets/cnDcnDABNCH7r5Oz.jpg" alt="United Kingdom">
-    </div>
     <div class="intro">
         <p id="target" align="right"><img src="./assets/cloud-on-blue-sky-on-transparent.png" alt="cloud" height="150px"></p>
         <p align="center"><font face="Cooper Black" size="10" color="blue">Akash Khobare</font></p>
@@ -50,7 +46,7 @@
         <div class="skill">
             <img class="rounded" src="./assets/shutterstock_213333985.jpg" alt="skill-math">
             <h3>Mathematics Teaching</h3>
-            <p>Additionally I am B.Ed qualified from IGNOU. My primary hobby is to teach math to kids.</p>
+            <p>Additionally I am B.Ed qualified from IGNOU. My primary hobby is to have fun with kids.</p>
         </div>
     </div>
     <hr>
@@ -67,6 +63,16 @@
             </p>
             <p align="center"><button type="button" class="btn btn-primary">Contact Me</button></p>
         </div>
+    </div>
+
+    <div class="container"> <footer class="py-3 my-4"> <ul class="nav justify-content-center border-bottom pb-3 mb-3"> 
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Home</a></li> 
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Features</a></li> 
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Pricing</a></li> 
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">FAQs</a></li> 
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">About</a></li> </ul> 
+        <p class="text-center text-body-secondary">© 2025 Bakheor Creations, Inc</p> 
+        </footer> 
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
